Add basic "in row" mode to support <td> insertion
Created attachment 60489 [details] Patch
Comment on attachment 60489 [details] Patch Rejecting patch 60489 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Adam Barth', u'--force']" exit_code: 1 Last 500 characters of output: nner-expected.txt Hunk #1 FAILED at 4936. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/html5lib/runner-expected.txt.rej patching file LayoutTests/html5lib/runner.html Hunk #1 FAILED at 60. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/html5lib/runner.html.rej patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 1. patching file WebCore/html/HTMLElementStack.cpp patching file WebCore/html/HTMLElementStack.h patching file WebCore/html/HTMLTreeBuilder.cpp Full output: http://webkit-commit-queue.appspot.com/results/3402240
Comment on attachment 60489 [details] Patch In theory, this should land fine now that Bug 41582 is in the queue.
Comment on attachment 60489 [details] Patch Rejecting patch 60489 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Adam Barth', u'--force']" exit_code: 1 Last 500 characters of output: nner-expected.txt Hunk #1 FAILED at 4936. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/html5lib/runner-expected.txt.rej patching file LayoutTests/html5lib/runner.html Hunk #1 FAILED at 60. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/html5lib/runner.html.rej patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebCore/html/HTMLElementStack.cpp patching file WebCore/html/HTMLElementStack.h patching file WebCore/html/HTMLTreeBuilder.cpp Full output: http://webkit-commit-queue.appspot.com/results/3409265
Comment on attachment 60489 [details] Patch Cascading failure from earlier flaky test trouble. :(
Comment on attachment 60489 [details] Patch Clearing flags on attachment: 60489 Committed r62499: <http://trac.webkit.org/changeset/62499>
All reviewed patches have been landed. Closing bug.