2010-07-05  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        Add basic "in row" mode to support <td> and <th> insertion
        https://bugs.webkit.org/show_bug.cgi?id=41588

        Also fixed <td> or <th> as a direct child of <table>.

        Most of this was covered by html5lib/runner.html tests,
        but I had to add a new tables01.dat to cover the <th> cases.

        * html/HTMLElementStack.cpp:
        (WebCore::HTMLNames::isTableRowScopeMarker):
        (WebCore::HTMLElementStack::popUntilTableRowScopeMarker):
        * html/HTMLElementStack.h:
        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processStartTag):
2010-07-05  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add basic "in row" mode to support <td> insertion
        https://bugs.webkit.org/show_bug.cgi?id=41588

        Added tables01.dat to test a previously untested
        <table><th> case.  I expect we'll add many more table
        tests there as we complete our implementation.

        * html5lib/runner-expected-html5.txt:
        * html5lib/runner-expected.txt:
        * html5lib/runner.html:
        * html5lib/resources/tables01.dat: Added.


Canonical link: https://commits.webkit.org/53414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62499 268f45cc-cd09-0410-ab3c-d52691b4dbfc