WebCore/html/HTMLElementStack.h
@@ -84,6 +84,7 @@ public:
     void popUntil(Element*);
     void popUntilTableScopeMarker(); // "clear the stack back to a table context" in the spec.
     void popUntilTableBodyScopeMarker(); // "clear the stack back to a table body context" in the spec.
+    void popUntilTableRowScopeMarker(); // "clear the stack back to a table row context" in the spec.
     void popHTMLHeadElement();
     void popHTMLBodyElement();
 
